@@ -22,6 +22,8 @@ Version 1.8.3
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
        in repo browser. (Sergey Azarkevich)
+- NEW: Issue 563: Add "do this for all items" checkbox
+       when removing multiple properties. (Stefan)
 
 Version 1.8.2
 - BUG: Issue #522: OK button falsely enabled
